ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------

11/19/08 Remi Ricard (papaDoc)
        * Fix problem with dJointGetPRPosition and
          dJointGetPRPositionRate when the joint is attached to only
          a body 2. The sign was inverted.
        * Add unit test to check the above problem
        * Increase the tolerance to remove failure in unit test
        * Remove compilation warning in unit test with the use of REAL()

11/18/08 Remi Ricard (papaDoc)
       * Fix bug: When a piston joint had only one body attached to position 2,
         dJointAttach(jId, 0, bId). The body was not push in the right direction to
         move back between the limits.
       * Add more functionality to demo_piston.cpp
       * Run astyle on modified files.

11/18/08 Remi Ricard (papaDoc)
        * Fix bug: When a slider joint had only one body attached to position 2,
         dJointAttach(jId, 0, bId). The body was not push in the right direction to
         move back between the limits.

10/29/08 Oleh_Derevenko

        * Premake scripts changed to only include chosen collision library
          sources in project on Windows. --all-collis-libs premake option 
          added to allow inclusion of all collision library sources into the 
          project

10/15/08 Remi Ricard (papaDoc)
        * Applying patch #2158425 64-bit GIMPACT provided by Mark
          William. This patch enable GIMPACT to works on 64-bit machine.

10/15/08 Remi Ricard (papaDoc)
        * Add function dJointGetPRAngle and dJointGetPRAngleRate

10/15/08 Remi Ricard (papaDoc)
        * Enable the motor on the rotoide part of the PR joint

10/15/08 Remi Ricard (papaDoc)